--- a/src/app/UI/shared/components/header/header.component.html
+++ b/src/app/UI/shared/components/header/header.component.html
@@ -1,16 +1,17 @@
-<div class="container">
+<div class="container-fluid">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="#">
         <div class="logoCont col-md-3">
-          <img class="img-fluid" src="images/logo.svg">
+          <img class="img-fluid" src="images/logo.svg" alt="Logo">
         </div>
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="nav nav-pills col-md justify-content-center">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a routerLink="/" class="nav-link" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Inicio</a>
           </li>
@@ -18,16 +19,34 @@
             <a routerLink="/brokers" class="nav-link" routerLinkActive="active">Brokers</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" [class.disabled]="true">Mercado</a>
+            <a href="#" class="nav-link disabled" aria-disabled="true">Mercado</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" [class.disabled]="true">FAQs</a>
+            <a href="#" class="nav-link disabled" aria-disabled="true">FAQs</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link" [class.disabled]="true">Contacto</a>
+            <a href="#" class="nav-link disabled" aria-disabled="true">Contacto</a>
+          </li>
+
+          <!-- Si el usuario no está autenticado -->
+          <li *ngIf="!isAuthenticated" class="nav-item">
+            <button class="btn btn-primary text-white" (click)="openLogin()">Iniciar sesión</button>
+          </li>
+
+          <!-- Si el usuario está autenticado -->
+          <li *ngIf="isAuthenticated" class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              {{ user?.name }}
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a routerLink="/profile" class="dropdown-item">Mi perfil</a></li>
+              <li><button class="dropdown-item" (click)="logout()">Cerrar sesión</button></li>
+            </ul>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 </div>
+<app-login-modal [class.d-none]="!showModal" (closeEvent)="closeLogin()"></app-login-modal>
+
