--- a/src/app/UI/views/broker-list/broker-list.component.css
+++ b/src/app/UI/views/broker-list/broker-list.component.css
@@ -5,11 +5,13 @@
   padding: 16px;
   margin-bottom: 16px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-  /* display: flex;
-  flex-direction: column;
-  align-items: flex-start; */
+  cursor: pointer;
 }
-
+.broker-card:hover{
+  scale: 1.015;
+  transform: ease-in-out 0.35s;
+  border-color: #60C86D;
+}
 .broker-header {
   display: flex;
   align-items: center;
