--- a/src/app/UI/utils/comment-box/comment-box.component.css
+++ b/src/app/UI/utils/comment-box/comment-box.component.css
@@ -75,3 +75,43 @@
 .star-rating span:hover {
   transform: scale(1.2);
 }
+
+.backdrop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.add-comment {
+  position: relative;
+  padding: 16px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  margin: auto;
+  margin-top: 5px;
+}
+
+.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
+button:disabled {
+  background: #ccc;
+  cursor: not-allowed;
+}
+
+
