--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,16 @@
   background-color: var(--primary-color);
   border-color: var(--primary-color);
 }
+
+.cdk-global-overlay-wrapper{
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex
+;
+  align-items: center;
+  justify-content: center;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
