--- a/src/app/UI/views/broker-detail/broker-detail.component.html
+++ b/src/app/UI/views/broker-detail/broker-detail.component.html
@@ -1,4 +1,8 @@
 <div class="broker-container">
+  <button mat-button color="primary" (click)="goBack()">
+    <mat-icon>arrow_back</mat-icon>
+    Volver
+  </button>
   <div class="broker-header">
     <div>
     <img [src]="broker.logo" alt="Broker Logo" class="broker-logo" />
