--- a/src/app/UI/shared/components/header/header.component.html
+++ b/src/app/UI/shared/components/header/header.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item">
             <a routerLink="/brokers" class="nav-link" routerLinkActive="active">Brokers</a>
           </li>
+          <li class="nav-item">
+            <a routerLink="/scams" class="nav-link" routerLinkActive="active">Scams</a>
+          </li>
 
 
           <li *ngIf="!isAuthenticated" class="nav-item">
@@ -30,6 +33,7 @@
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
               <li *ngIf="user?.roleId === adminId"><a routerLink="/brokers-admin" class="dropdown-item">Gestión de brokers</a></li>
+              <li *ngIf="user?.roleId === adminId"><a routerLink="/scams-admin" class="dropdown-item">Gestión de scams</a></li>
               <li *ngIf="user?.roleId === adminId"><a routerLink="/users-admin" class="dropdown-item">Gestión de usuarios</a></li>
               <li><button class="dropdown-item" (click)="logout()">Cerrar sesión</button></li>
             </ul>
