--- a/src/app/UI/utils/users-dialog/users-dialog.component.html
+++ b/src/app/UI/utils/users-dialog/users-dialog.component.html
@@ -13,6 +13,11 @@
   </mat-form-field>
 
   <mat-form-field appearance="fill" class="full-width">
+    <mat-label>Número de Télefono</mat-label>
+    <input matInput formControlName="phoneNumber" />
+  </mat-form-field>
+
+  <mat-form-field appearance="fill" class="full-width">
     <mat-label>Email</mat-label>
     <input matInput formControlName="email" type="email" />
   </mat-form-field>
