--- a/src/app/UI/utils/login-modal/login-modal.component.html
+++ b/src/app/UI/utils/login-modal/login-modal.component.html
@@ -35,6 +35,12 @@
             <label class="form-label">Email</label>
             <input type="email" class="form-control" formControlName="email">
           </div>
+
+          <div class="mb-3">
+            <label class="form-label">Número de teléfono(Opcional)</label>
+            <input class="form-control" formControlName="phoneNumber">
+          </div>
+
           <div class="mb-3">
             <label class="form-label">Contraseña</label>
             <input type="password" class="form-control" formControlName="password">
